# wize-mcp

./: README.md  Workwize Public API Documentation.postman_collection.json  main.py  pyproject.toml  test.py  wize-mcp.py
src/workwize_mcp/: server.py
src/workwize_mcp/api/: client.py
src/workwize_mcp/tools/: __init__.py  base.py
src/workwize_mcp/tools/assets/: __init__.py  create_asset.py  get_assets.py  get_warehouses.py
src/workwize_mcp/tools/categories/: __init__.py  get_categories.py
src/workwize_mcp/tools/employees/: __init__.py  create_asset.py  create_employee.py  get_employee_address.py  get_employees.py  models.py  update_address.py  update_employee_address.py
src/workwize_mcp/tools/invites/: __init__.py  send_invite.py
src/workwize_mcp/tools/offboards/: __init__.py  create_offboard.py  (+1 more)
tools/assets/: __init__.py  create_asset.py  get_assets.py  get_warehouses.py  models.py
tools/categories/: __init__.py  get_categories.py
tools/employees/: __init__.py  create_employee.py  create_employee_address.py  create_employee_asset.py  create_order_for_employee.py  get_employee_addresses.py  get_employee_user.py  get_employees.py  update_employee.py  update_employee_address.py
tools/invites/: __init__.py  create_invite.py  send_invite.py
tools/offboards/: __init__.py  create_offboard.py  get_offboards.py
tools/offices/: __init__.py  create_order_for_office.py  get_offices.py  models.py
tools/orders/: get_order_products.py  get_order_shipments.py  get_orders.py
tools/products/: get_products.py
tools/warehouses/: __init__.py  get_warehouses.py
(+12 files in other folders)
