[project]
name = "workwize-mcp"
version = "0.1.0"
description = "MCP Server for Workwize Public API"
authors = []
dependencies = [
    "mcp>=0.1.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
workwize-mcp = "workwize_mcp.server:main"
